--- a/src/Components/AnologClock/AnlogClock.css
+++ b/src/Components/AnologClock/AnlogClock.css
@@ -6,10 +6,21 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-body {
+
+.container {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
-  background: #acbaca;
+  height: 100vh;
+  background-color: #acbaca;
+}
+
+.clock {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  background-color: #c9d5e0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
