--- a/src/Components/AnologClock/AnlogClock.css
+++ b/src/Components/AnologClock/AnlogClock.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900;&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
 * {
   margin: 0;
@@ -6,15 +6,13 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-
-.container {
+.body {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   height: 100vh;
   background-color: #acbaca;
 }
-
 .clock {
   position: relative;
   width: 300px;
@@ -23,4 +21,108 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 50px;
+  box-shadow: 30px 30px 30px -10px rgba(0, 0, 0, 0.1),
+    inset 15px 15px 10px rgba(255, 255, 255, 0.75),
+    -15px -15px 35px rgba(255, 255, 255, 0.55),
+    inset -1px -1px 10px rgba(0, 0, 0, 0.2);
+}
+
+.clock::before {
+  content: "";
+  position: absolute;
+  width: 4px;
+  height: 4px;
+  background: #e91e63;
+  border-radius: 50%;
+  z-index: 1000;
+  box-shadow: 0 0 0 1px #e91e63, 0 0 0 3px #ffffff,
+    0 0 5px 5px rgba(0, 0, 0, 0.15);
+}
+
+.clock .numbers {
+  position: absolute;
+  inset: 35px;
+  background: #152b4a;
+  border-radius: 50%;
+  box-shadow: 5px 5px 15px #152b4a66,
+    inset 5px 5px 5px rgba(255, 255, 255, 0.55),
+    -6px -6px 10px rgba(255, 255, 255, 1);
+}
+
+.clock .numbers span {
+  position: absolute;
+  inset: 5px;
+  text-align: center;
+  color: #ffffff;
+  font-size: 1.25rem;
+  transform: rotate(calc(90deg * var(--i)));
+}
+
+.clock .numbers span b {
+  font-weight: 600;
+  transform: rotate(calc(-90deg * var(--i)));
+  display: inline-block;
+}
+
+.clock .numbers::before {
+  content: "";
+  position: absolute;
+  inset: 35px;
+  border-radius: 50%;
+  background: linear-gradient(#2196f3, #e91e63);
+  animation: animation 2s linear infinite;
+}
+
+@keyframes animation {
+  0% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+.clock .numbers::after {
+  content: "";
+  position: absolute;
+  inset: 38px;
+  border-radius: 50%;
+  background: #152b4a;
+}
+
+.clock .numbers .needles {
+  position: absolute;
+  inset: 0;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  z-index: 10;
+}
+
+.clock .numbers .needles i {
+  position: absolute;
+  width: 3px;
+  height: 50%;
+  background: #ffffff;
+  transform-origin: bottom;
+  transform: scaleY(0.55);
+}
+
+.clock .numbers .needles#hr i {
+  transform: scaleY(0.3);
+  width: 4px;
+}
+
+.clock .numbers .needles#min i {
+  transform: scaleY(0.45);
+  width: 3px;
+}
+
+.clock .numbers .needles#sec i {
+  transform: scaleY(0.55);
+  position: absolute;
+  width: 2px;
+  background-color: #e91e63;
+  box-shadow: 0 30px 0 #e91e63;
 }
