--- a/src/Components/AnologClock/AnlogClock.css
+++ b/src/Components/AnologClock/AnlogClock.css
@@ -6,11 +6,12 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-.body {
+body {
   display: flex;
   justify-content: space-around;
   align-items: center;
   height: 100vh;
+  width: 100%;
   background-color: #acbaca;
 }
 .clock {
